<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mediaplus.app.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_videos"
        android:name="com.mediaplus.app.ui.videos.VideosFragment"
        android:label="@string/nav_videos"
        tools:layout="@layout/fragment_videos" />

    <fragment
        android:id="@+id/navigation_music"
        android:name="com.mediaplus.app.ui.music.MusicFragment"
        android:label="@string/nav_music"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/navigation_playlists"
        android:name="com.mediaplus.app.ui.playlists.PlaylistsFragment"
        android:label="@string/nav_playlists"
        tools:layout="@layout/fragment_playlists" />

    <fragment
        android:id="@+id/playlistDetailFragment"
        android:name="com.mediaplus.app.ui.playlists.PlaylistDetailFragment"
        android:label="Playlist Detail"
        tools:layout="@layout/fragment_playlist_detail">
        <argument
            android:name="playlistId"
            app:argType="long" />
    </fragment>

    <activity
        android:id="@+id/videoPlayerActivity"
        android:name="com.mediaplus.app.ui.player.VideoPlayerActivity"
        tools:layout="@layout/activity_video_player">
        <argument
            android:name="mediaItemId"
            app:argType="string" />
    </activity>

    <activity
        android:id="@+id/audioPlayerActivity"
        android:name="com.mediaplus.app.ui.player.AudioPlayerActivity"
        tools:layout="@layout/activity_audio_player">
        <argument
            android:name="mediaItemId"
            app:argType="string" />
        <argument
            android:name="playlistId"
            app:argType="long"
            android:defaultValue="-1L" />
    </activity>
</navigation>
